# mintlify-hygiene

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.sh  mintlify-hygiene.sample.toml
crates/mintlify-hygiene/: Cargo.toml
crates/mintlify-hygiene/src/: autofix.rs  config.rs  finding.rs  frontmatter.rs  lib.rs  lint.rs  main.rs  markdown.rs  nav.rs
crates/mintlify-hygiene/tests/: cli.rs  snapshots.rs
crates/mintlify-hygiene/tests/fixtures/: README.md
crates/mintlify-hygiene/tests/fixtures/failing-site/: mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/good-site/: mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/mdx-parse-error-site/: docs.json  mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/root-layout-site/: README.md  docs.json  mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/root-layout-site-overrides/: mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/rule-snippets/: em-dash-in-prose.md  frontmatter-inner-double-quotes.md  ok-in-fenced-code.md  unescaped-lt-in-table.md
crates/mintlify-hygiene/tests/fixtures/snapshot-filename-chars/: mintlify-hygiene.toml
crates/mintlify-hygiene/tests/fixtures/snapshot-frontmatter-yaml/: mintlify-hygiene.toml
crates/mintlify-hygiene/tests/snapshots/: snapshots__check_root_layout_mdx_only_report.snap  snapshots__filename_chars_parentheses.snap  snapshots__frontmatter_yaml_broken_quotes.snap  snapshots__json_output_for_representative_mintlify_fixture.snap  snapshots__mdx_esm_expr_skip.snap  snapshots__mdx_jsx_structure_report.snap  snapshots__mdx_parse_fallback_still_lints.snap  snapshots__nav_registration_for_root_layout_repo.snap  snapshots__prose_em_dash_in_lists_and_callouts.snap  snapshots__unescaped_lt_in_mdx_with_mintlify_components.snap
(+48 files in other folders)
