[workspace]
resolver = "2"
members = [
    "crates/mintlify-hygiene",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hydradb/mintlify-hygiene"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false
