[workspace]
resolver = "2"
members = [
    "crates/mintlify-hygiene",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hydradb/mintlify-hygiene"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false
