[package]
name = "mintlify-hygiene"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Mintlify documentation hygiene checks"
keywords = ["mintlify", "documentation", "cli", "linter"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
globset = "0.4"
markdown = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
insta = "1.47.2"
tempfile = "3"
